# MRzero-Core

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  brainweb-subj05.json  pyproject.toml  seq_funtion_standered.txt
.cursor/rules/: mrzero-notebook-structure.mdc  mrzero-project-overview.mdc  mrzero-sequence-standard.mdc
.github/workflows/: deploy_docs.yml  playground_test.yml  pypi_publish.yml  simulation_test.yml
MRzeroCore/: __init__.py  reconstruction.py  sequence.py
MRzeroCore/phantom/: custom_voxel_phantom.py  sim_data.py
MRzeroCore/phantom/brainweb/: __init__.py  brainweb.py
MRzeroCore/pulseq/pulseq_loader/: pulse.py
MRzeroCore/simulation/: main_pass.py  pre_pass.py
documentation/: _config.yml  _toc.yml  api.md  book.toml  examples.md  faq.md  intro.md  matlab_integration.md  phantom_generation.md  pulseq_integration.md  references.bib  requirements.txt
documentation/api/: phantom.md  phantom.rst  reco.md  reco.rst  sequence.md  sequence.rst  simulation.md  simulation.rst  util.md
documentation/api - old/: phantom.md  util.md
documentation/api/simulation/: isochromat_sim.md  pdg_sim.md  spin_sim.md
documentation/examples/: flash.ipynb  pulseq_flash.ipynb  pulseq_sim.ipynb  pulseq_sim_pTx.ipynb  solF02_radialssfp_CS_reco.ipynb
documentation/playground/: playground.md  quantified_brain.npz
documentation/playground/seqs/: FLASH.ipynb
documentation/playground/templates/: binary_masks.ipynb  generate.py  seqs.ipynb  template_A.ipynb
documentation/playground_mr0/: FLASH_2D.seq  Pulseq_zero_FLASH_FAopt_PSFtask.ipynb  Pulseq_zero_TSE_FAopt_SARtask.ipynb  flash.ipynb  flash_DWI.ipynb  mr00_FLASH_2D_ernstAngle_opt.ipynb  mr0_CS_cartesian_seq.ipynb  mr0_CS_radial_seq.ipynb  mr0_DREAM_STE_seq.ipynb  mr0_DREAM_STID_seq.ipynb  mr0_DREAM_seq.ipynb  mr0_DWI_GRE_2D_seq.ipynb  mr0_DWI_SE_EPI.ipynb  mr0_EPI_2D_seq.ipynb  mr0_FID_seq.ipynb  mr0_FLASH_2D_seq.ipynb  mr0_GRE_to_FLASH.ipynb  mr0_RARE_2D_seq.ipynb  mr0_RARE_2D_seq_multi_shot.ipynb  mr0_SE_CPMG_seq.ipynb  mr0_STE_3pulses_5echoes_seq.ipynb  mr0_TSE_2D_multi_shot_seq.ipynb  mr0_bSSFP_2D_seq.ipynb  mr0_burst_TSE.ipynb  mr0_diffusion_prep_STEAM_2D_seq.ipynb  mr0_opt_FLASH_2D_IR_Fit_T1.ipynb  mr0_opt_FLASH_2D_IR_voxelNN_T1.ipynb  mr0_pypulseq_exmpls_seq.ipynb  mr0_spiral_GRE.ipynb  mr0_time_vs_acc_bspBSSFP.ipynb  mr0_upload_seq.ipynb  notebook_requirements.sh  overview.md  phantom.pickle  ptx_phantom.p  pulseq_flash.ipynb  pulseq_rf_shim.ipynb  pulseq_sim_pTx.ipynb  pulseq_zero_DESC_demo.ipynb  reference_bssfp_data_feb2025.npz  (+2 more)
documentation/playground_mr0/legacy_seqs/: flash_DWI.ipynb  mr0_CS_cartesian_seq.ipynb
documentation/playground_mr0/seqs/: flash pTx QM.seq
documentation/playground_mr0/unsorted/: Pulseq_2D_density_adapted_radial.ipynb  gpt4mr.ipynb  improved_mr0_RARE_2D_seq.ipynb  improved_mr0_RARE_2D_seq_multi_shot.ipynb  improved_mr0_RARE_2D_seq_nonsel.ipynb  mr0_EPI_2D_with_ORC_seq.ipynb  mr0_bSSFP_2D_seq.ipynb  mr0_burst_TSE.ipynb  mr0_diffusion_prep_STEAM_2D_seq.ipynb  mr0_spiral_GRE.ipynb
documentation/resources/: logo.blend
documentation/src/: README.md  SUMMARY.md  api-math.md  api-nifti.md  api-phantom.md  api-reconstruction.md  api-sequence.md  api-simulation.md  api-unsorted.md  api-util.md  api.md  faq.md  fft_sign_conventions.md  integration-matlab.md  integration-pulseq.md  integration-pulseqzero.md  integration.md  literature.md  nifti-coords.md  nifti-generate.md  nifti-overview.md  nifti-spec.md  nifti.md  phantoms.md  playground.md  pulseqzero-intro.md  pulseqzero-math.md  snippets.txt  state_selection.md
notebooks/: flash.ipynb
python/: test.py
python/MRzeroCore/: __init__.py  reconstruction.py  sequence.py  util.py
python/MRzeroCore/phantom/: __init__.py  custom_voxel_phantom.py  dynamic_voxel_phantom.py  nifti_phantom.py  out.json  sim_data.py  tissue_dict.py  voxel_grid_phantom.py
python/MRzeroCore/pulseq/: __init__.py  exporter.py  (+6 more)
src/: lib.rs  pre_pass.rs  seq_import.rs
tests/: README.md  playground_test.py  requirements.txt  test_bssfp.py  utils.py
tests/bssfp/: config.py  generate_ref_file.py  test_bssfp.py
tests/simulation_test/: config.py  generate_actual_files.py  generate_files.py  generate_ref_files.py  generate_seq_files  generate_seq_files.py  test_simulation.ps1  test_simulation.py
(+40 files in other folders)
