[package]
name = "mrzero_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "num-complex"] }
num-complex = "0.4.2"

[package.metadata.maturin]
name = "MRzeroCore._prepass"
python-source = "python"
