[package]
name = "mrzero_core"
version = "0.3.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3-py37", "extension-module", "num-complex"] }
num-complex = "0.4.6"
