[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "MRzeroCore"
description = "Core functionality of MRzero"
authors = [
    {name = "Jonathan Endres", email = "jonathan.endres@uk-erlangen.de"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.7"
dependencies = [
    "torch>=1.12",
    "pypulseq",
    "matplotlib",
    "scipy",
]

[project.urls]
Repository = "https://gitlab.cs.fau.de/mrzero/MRzero-Core"
Documentation = "https://mrzerocore.readthedocs.io"
MRzero-Paper = "https://arxiv.org/abs/2002.04265"

[tool.maturin]
profile = "release"
strip = true
module-name = "MRzeroCore._prepass"
python-source = "python"
