[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "MRzeroCore"
description = "Core functionality of MRzero"
authors = [
    {name = "Jonathan Endres", email = "jonathan.endres@uk-erlangen.de"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=1.12",
    "pypulseq",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "requests>=2.20",
    "scikit-image",
    "torchkbnufft",
    "pydisseqt>=0.1.13"
]

[project.urls]
Repository = "https://github.com/MRsources/MRzero-Core"
Documentation = "https://mrzero-core.readthedocs.io/"
MRzero-Paper = "https://arxiv.org/abs/2002.04265"

[tool.maturin]
profile = "release"
strip = true
module-name = "MRzeroCore._prepass"
python-source = "python"
