[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "MRzeroCore"
version = "0.4.2"
description = "Core functionality of MRzero"
authors = [
    {name = "Jonathan Endres", email = "jonathan.endres@uk-erlangen.de"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.9"
dependencies = [
    "ismrmrd",
    "matplotlib>=3.5",
    "pydisseqt>=0.1.13",
    "pypulseq",
    "requests>=2.20",
    "scikit-image",
    "scipy>=1.7",
    "torchkbnufft",
    "torch>=1.12",
    "tqdm",
    "nibabel",
]

[project.urls]
Repository = "https://github.com/MRsources/MRzero-Core"
Documentation = "https://mrzero-core.readthedocs.io/"
MRzero-Paper = "https://arxiv.org/abs/2002.04265"

[tool.maturin]
profile = "release"
strip = true
module-name = "MRzeroCore._prepass"
python-source = "python"
